# e-commerce-iste

./: .gitignore  main.py  pyproject.toml
carts/: __init__.py  carts_api.py
files/: data.json
products/: products_api.py
serverFiles/: database.py  schemas.py
